Fix loadBalancerIP field and add debug log

--- a/charts/buildkit-service/templates/deployment.yaml
+++ b/charts/buildkit-service/templates/deployment.yaml
@@ -55,6 +55,9 @@ spec:
             - --tlskey
             - /certs/key.pem
           {{- end }}
+          {{- if .Values.debugLog }}
+            - --debug
+          {{- end }}
           ports:
             - name: tcp
               containerPort: 1234
