--- a/charts/buildkit-service/values.yaml
+++ b/charts/buildkit-service/values.yaml
@@ -11,6 +11,9 @@ image:
 # -- Run rootless mode, https://github.com/moby/buildkit/blob/master/docs/rootless.md
 rootless: false
 
+# -- Enable debug logging
+debugLog: false
+
 # -- Pod annotations
 podAnnotations: {}
 
