--- a/charts/buildkit-service/templates/service.yaml
+++ b/charts/buildkit-service/templates/service.yaml
@@ -11,7 +11,7 @@ metadata:
 spec:
   type: {{ .Values.service.type }}
   {{- if .Values.service.loadbalancerIp }}
-  loadbalancerIP: {{ .Values.service.loadbalancerIp }}
+  loadBalancerIP: {{ .Values.service.loadbalancerIp | quote }}
   {{- end }}
   ports:
     - port: {{ .Values.service.port }}
