Add doc and revert version number bump

--- a/charts/buildkit-service/values.yaml
+++ b/charts/buildkit-service/values.yaml
@@ -15,6 +15,7 @@ rootless: false
 debugLog: false
 
 pdb:
+  # -- Minimum available pods
   minAvailable: 1
 # -- Pod annotations
 podAnnotations: {}
