--- a/charts/buildkit-service/values.yaml
+++ b/charts/buildkit-service/values.yaml
@@ -14,6 +14,9 @@ rootless: false
 # -- Enable debug logging
 debugLog: false
 
+pdb:
+  # -- Minimum available pods
+  minAvailable: 1
 # -- Pod annotations
 podAnnotations: {}
 
