--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        kubernetes_version: ['1.22.13', '1.23.8', '1.24.2']
+        kubernetes_version: ['1.24.1', '1.25.1', '1.26.4', '1.27.1']
     steps:
       - name: Checkout
         uses: actions/checkout@v4
