--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,16 @@ on:
       - .github/**/*
 
 jobs:
+  docs:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      - name: Lint docs
+        run: .github/script/helm-docs.sh
+
   lint:
     runs-on: ubuntu-latest
     steps:
