--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -36,7 +36,7 @@ jobs:
           fetch-depth: 0
       - name: Setup chart testing
         uses: helm/chart-testing-action@v2.6.1
-      - name: Lint
+      - name: Lint charts
         run: ct lint --config .github/config/ct-lint.yaml --check-version-increment=false
 
   validate:
