--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,14 +7,10 @@ on:
     paths:
       - charts/*/Chart.yaml
 
-env:
-  KUBEVAL_VERSION: "0.16.1"
-  HELMDOCS_VERSION: "1.5.0"
-
 jobs:
   lint:
     if: "contains(github.event.head_commit.message, 'Update chart to version')"
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -29,7 +25,7 @@ jobs:
 
   release:
     if: "contains(github.event.head_commit.message, 'Update chart to version')"
-    runs-on: ubuntu-20.04
+    runs-on: ubuntu-latest
     needs:
       - lint
     steps:
