--- a/.github/workflows/smocker.yml
+++ b/.github/workflows/smocker.yml
@@ -27,8 +27,8 @@ jobs:
         if: github.ref == 'refs/heads/master'
         uses: docker/login-action@v3.0.0
         with:
-          username: ${{ github.actor }}
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Set smocker version
         id: version
         run: |
