--- a/charts/smocker/Dockerfile
+++ b/charts/smocker/Dockerfile
@@ -1,3 +1,7 @@
 FROM thiht/smocker:0.18.5
 
 RUN apk --no-cache add bash curl
+
+LABEL org.opencontainers.image.authors="andrejs" \
+  org.opencontainers.image.title="smocker" \
+  org.opencontainers.image.description="Smocker mock server image with curl and bash"
