--- a/.github/workflows/smocker.yml
+++ b/.github/workflows/smocker.yml
@@ -27,7 +27,7 @@ jobs:
         if: github.ref == 'refs/heads/master'
         uses: docker/login-action@v3.0.0
         with:
-          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          username: andrcuns
           password: ${{ secrets.DOCKERHUB_PASSWORD }}
       - name: Set smocker version
         id: version
