--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   lint:
-    if: "contains(github.event.head_commit.message, 'Update chart to version')"
+    if: contains(github.event.head_commit.message, 'Update chart to version')
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -18,13 +18,13 @@ jobs:
           fetch-depth: 0
       - name: Setup chart testing
         uses: helm/chart-testing-action@v2.6.1
-      - name: Lint
+      - name: Lint charts
         run: ct lint --config .github/config/ct-lint.yaml
       - name: Lint docs
         run: .github/script/helm-docs.sh
 
   release:
-    if: "contains(github.event.head_commit.message, 'Update chart to version')"
+    if: contains(github.event.head_commit.message, 'Update chart to version')
     runs-on: ubuntu-latest
     needs:
       - lint
