--- a/.github/workflows/smocker.yml
+++ b/.github/workflows/smocker.yml
@@ -3,12 +3,12 @@ name: Build smocker
 on:
   pull_request:
     branches:
-      - master
+      - main
     paths:
       - charts/smocker/Dockerfile
   push:
     branches:
-      - master
+      - main
     paths:
       - charts/smocker/Dockerfile
 
@@ -24,7 +24,7 @@ jobs:
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3.0.0
       - name: Login to DockerHub
-        if: github.ref == 'refs/heads/master'
+        if: github.ref == 'refs/heads/main'
         uses: docker/login-action@v3.0.0
         with:
           username: andrcuns
@@ -47,6 +47,6 @@ jobs:
         uses: docker/build-push-action@v5.1.0
         with:
           context: charts/smocker
-          push: ${{ github.ref == 'refs/heads/master' }}
+          push: ${{ github.ref == 'refs/heads/main' }}
           platforms: linux/amd64,linux/arm64
           tags: ${{ steps.tags.outputs.tags }}
