print helm version

--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -28,10 +28,11 @@ jobs:
         with:
           fetch-depth: 0
           ssh-key: ${{ secrets.RELEASE_SSH_KEY }}
+      - name: Print helm version
+        run: helm version --short
       - name: Install dependencies
         run: |
           source .github/script/utils.sh
-          install-helm
           install-helmdocs
       - name: Update version
         run: .github/script/bump-version.sh ${{ inputs.chart }} ${{ inputs.semver }}
