--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,9 @@ on:
     paths:
       - charts/*/Chart.yaml
 
+env:
+  CT_TARGET_BRANCH: main
+
 jobs:
   lint:
     if: contains(github.event.head_commit.message, 'Update chart to version')
