Fix version update workflow (#157)
* Remove helm installation

* Remove unbound check

* Force target branch

* Install local chart version plugin

* Move local chart version install to function

* Remove verbose output

* Remove empty log messages

--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -31,7 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
           source .github/script/utils.sh
-          install-helm
           install-helmdocs
+          install-local-chart-version
       - name: Update version
         run: .github/script/bump-version.sh ${{ inputs.chart }} ${{ inputs.semver }}
