--- a/charts/buildkit-service/values.yaml
+++ b/charts/buildkit-service/values.yaml
@@ -57,3 +57,18 @@ tls:
   certKey:
   # -- Base64 encoded ca.pem
   certCA:
+
+# -- Custom configuration buildkitd.toml
+buildkitdToml: ""
+
+autoscaling:
+  # -- Enable horizontal pod auto-scaler
+  enabled: false
+  # -- Minimum number of replicas
+  minReplicas: 1
+  # -- Maximum number of replicas
+  maxReplicas: 5
+  # -- Target CPU utilization percentage
+  targetCPUUtilizationPercentage: 80
+  # -- Target memory utilization percentage
+  targetMemoryUtilizationPercentage: 80
