--- a/charts/buildkit-service/values.yaml
+++ b/charts/buildkit-service/values.yaml
@@ -72,3 +72,7 @@ autoscaling:
   targetCPUUtilizationPercentage: 80
   # -- Target memory utilization percentage
   targetMemoryUtilizationPercentage: 80
+
+# -- Lifecycle hooks and termination
+lifecycle: {}
+terminationGracePeriodSeconds: 30
