--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -33,6 +33,25 @@
       ],
       "depNameTemplate": "norwoodj/helm-docs",
       "datasourceTemplate": "github-releases"
+    },
+    {
+      "customType": "regex",
+      "fileMatch": [
+        "charts/buildkit-service/Chart.yaml"
+      ],
+      "matchStrings": [
+        "appVersion: (?<currentValue>.*?)\\n"
+      ],
+      "depNameTemplate": "moby/buildkit",
+      "datasourceTemplate": "docker"
+    }
+  ],
+  "packageRules": [
+    {
+      "matchFiles": [
+        "charts/buildkit-service/Chart.yaml"
+      ],
+      "labels": ["dependencies", "buildkit-service"]
     }
   ]
 }
