Fix buildkitd.toml mountPath when rootless

--- a/charts/buildkit-service/templates/deployment.yaml
+++ b/charts/buildkit-service/templates/deployment.yaml
@@ -31,7 +31,7 @@ spec:
           volumeMounts:
           {{- if .Values.buildkitdToml }}
             - name: config
-              mountPath: /etc/buildkit
+              mountPath: {{ if .Values.rootless }}/home/user/.config/buildkit{{ else }}/etc/buildkit{{ end }}
           {{- end }}
           {{- if .Values.tls.enabled }}
             - name: certs
