--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,12 +19,16 @@ jobs:
         uses: actions/checkout@v4
         with:
           fetch-depth: 0
+      - name: Install helm-docs
+        uses: jdx/mise-action@v2
+        with:
+          install_args: "helm-docs"
       - name: Setup chart testing
         uses: helm/chart-testing-action@v2.7.0
       - name: Lint charts
         run: ct lint --config .github/config/ct-lint.yaml
       - name: Lint docs
-        run: .github/script/helm-docs.sh
+        run: mise lint-docs
 
   release:
     if: contains(github.event.head_commit.message, 'Update chart to version')
@@ -40,8 +44,10 @@ jobs:
         run: |
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR@users.noreply.github.com"
-      - name: Install Helm
-        uses: azure/setup-helm@v4
+      - name: Install helm
+        uses: jdx/mise-action@v2
+        with:
+          install_args: "helm"
       - name: Run chart-releaser
         uses: helm/chart-releaser-action@v1.7.0
         env:
