Feat: add daemon args
This allows to further customize the buildkit command line.
The motivation at this time is to use tools such as the ones described here:
https://github.com/moby/buildkit/blob/master/.github/issue_reporting_guide.md#reporting-deadlock

--- a/charts/buildkit-service/templates/deployment.yaml
+++ b/charts/buildkit-service/templates/deployment.yaml
@@ -70,6 +70,9 @@ spec:
           {{- if .Values.debugLog }}
             - --debug
           {{- end }}
+          {{- range .Values.daemonArgs }}
+            - {{ . }}
+          {{- end }}
           ports:
             - name: tcp
               containerPort: 1234
