--- a/.github/workflows/version.yml
+++ b/.github/workflows/version.yml
@@ -31,9 +31,9 @@ jobs:
         with:
           fetch-depth: 0
           ssh-key: ${{ secrets.RELEASE_SSH_KEY }}
-      - name: Install helm-docs
+      - name: Install helm
         uses: jdx/mise-action@v3
         with:
-          install_args: "helm-docs"
+          install_args: "helm helm-docs"
       - name: Update version
         run: mise bump-version --chart ${{ inputs.chart }} --version-segment ${{ inputs.semver }}
