Rename the TLS data subkeys to match the standard names that kubectl create secret & cert-manager will use

--- a/charts/buildkit-service/templates/deployment.yaml
+++ b/charts/buildkit-service/templates/deployment.yaml
@@ -63,11 +63,11 @@ spec:
           {{- end }}
           {{- if .Values.tls.enabled }}
             - --tlscacert
-            - /certs/ca.pem
+            - /certs/ca.crt
             - --tlscert
-            - /certs/cert.pem
+            - /certs/tls.crt
             - --tlskey
-            - /certs/key.pem
+            - /certs/tls.key
           {{- end }}
           {{- if .Values.debugLog }}
             - --debug
