--- a/charts/buildkit-service/templates/secret.yaml
+++ b/charts/buildkit-service/templates/secret.yaml
@@ -4,7 +4,7 @@ kind: Secret
 metadata:
   name: {{ include "buildkit.fullname" . }}
 data:
-  ca.pem: {{ include "buildkit.tlsCertCACert" . }}
-  cert.pem: {{ include "buildkit.tlsCert" . }}
-  key.pem: {{ include "buildkit.tlsCertKey" . }}
+  ca.crt: {{ include "buildkit.tlsCertCACert" . }}
+  tls.crt: {{ include "buildkit.tlsCert" . }}
+  tls.key: {{ include "buildkit.tlsCertKey" . }}
 {{- end }}
