--- a/charts/buildkit-service/templates/secret.yaml
+++ b/charts/buildkit-service/templates/secret.yaml
@@ -1,4 +1,4 @@
-{{- if .Values.tls.enabled }}
+{{- if and .Values.tls.enabled (not .Values.tls.existingSecret) }}
 apiVersion: v1
 kind: Secret
 metadata:
