--- a/charts/buildkit-service/values.yaml
+++ b/charts/buildkit-service/values.yaml
@@ -63,6 +63,8 @@ tls:
   certKey:
   # -- Base64 encoded ca.pem
   certCA:
+  # -- Name of an existing Secret in this namespace containing the certificate to be used for the server half of mTLS. Expected to contain tls.crt, tls.key ,ca.crt.
+  existingSecret:
 
 # -- Custom configuration buildkitd.toml
 buildkitdToml: ""
