Support providing TLS certificates from an existing Secret (#323)
* Rename the TLS data subkeys to match the standard names that kubectl create secret & cert-manager will use

* Support providing the TLS certificates from an existing Secret

--- a/charts/buildkit-service/templates/deployment.yaml
+++ b/charts/buildkit-service/templates/deployment.yaml
@@ -63,11 +63,11 @@ spec:
           {{- end }}
           {{- if .Values.tls.enabled }}
             - --tlscacert
-            - /certs/ca.pem
+            - /certs/ca.crt
             - --tlscert
-            - /certs/cert.pem
+            - /certs/tls.crt
             - --tlskey
-            - /certs/key.pem
+            - /certs/tls.key
           {{- end }}
           {{- if .Values.debugLog }}
             - --debug
@@ -134,7 +134,7 @@ spec:
       {{- if .Values.tls.enabled }}
       - name: certs
         secret:
-          secretName: {{ include "buildkit.fullname" . }}
+          secretName: {{ .Values.tls.existingSecret | default (include "buildkit.fullname" .) }}
       {{- end }}
       {{- if .Values.preStop }}
       - name: files
