Update helm version in mise tools

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -6,7 +6,8 @@
     "andrcuns/charts"
   ],
   "enabledManagers": [
-    "custom.regex"
+    "custom.regex",
+    "mise"
   ],
   "labels": [
     "dependencies"
