AppArmor annotations are deprecated - move to container security context (#359)
* AppArmor annotations are deprecated

https://kubernetes.io/docs/tutorials/security/apparmor/#securing-a-pod

Should be placed in container security context

* Remove old annotation

Co-authored-by: andrejs <git@andrcuns.mozmail.com>

* Added information about Kubernetes min required version

* Move to correct Readme file

* Update readme

---------

Co-authored-by: andrejs <git@andrcuns.mozmail.com>

--- a/charts/buildkit-service/templates/deployment.yaml
+++ b/charts/buildkit-service/templates/deployment.yaml
@@ -15,9 +15,6 @@ spec:
     metadata:
       {{- if or .Values.rootless .Values.podAnnotations }}
       annotations:
-        {{- if .Values.rootless }}
-        container.apparmor.security.beta.kubernetes.io/{{ .Chart.Name }}: unconfined
-        {{- end }}
         {{- with .Values.podAnnotations -}}
         {{ toYaml . | nindent 8 }}
         {{- end }}
@@ -106,6 +103,8 @@ spec:
             periodSeconds: 30
           securityContext:
           {{- if .Values.rootless }}
+            appArmorProfile: # Needs Kubernetes >= 1.30
+              type: Unconfined
             seccompProfile: # Needs Kubernetes >= 1.19
               type: Unconfined
             runAsUser: 1000
