feat(buildkit-service): add initContainers support
Add support for custom init containers to allow users to run
initialization tasks before the main buildkit container starts.

Use cases include:
- Network configuration (MTU fixes for jumbo frames)
- Volume preparation
- Permission setup

Bumped chart version to 1.2.0

--- a/charts/buildkit-service/values.yaml
+++ b/charts/buildkit-service/values.yaml
@@ -113,6 +113,17 @@ autoscaling:
   # -- Target memory utilization percentage
   targetMemoryUtilizationPercentage: 80
 
+# -- Init containers to run before the main buildkit container
+# Useful for network configuration, volume preparation, etc.
+initContainers: []
+  # - name: fix-mtu
+  #   image: busybox
+  #   command: ["sh", "-c", "ip link set dev eth0 mtu 1400 || true"]
+  #   securityContext:
+  #     capabilities:
+  #       add: ["NET_ADMIN"]
+  #     runAsUser: 0
+
 # -- Lifecycle hooks and termination
 lifecycle: {}
 terminationGracePeriodSeconds: 30
