--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        kubernetes_version: ['1.30.10', '1.31.6', '1.32.2']
+        kubernetes_version: ['1.29.15', '1.33.7', '1.34.3', '1.35.0']
     steps:
       - name: Checkout
         uses: actions/checkout@v6
